2007-09-12  Matthew Grooms <mgrooms@shrew.net>
	From Joy Latten <latten@austin.ibm.com>
	* configure.ac: Fix autoconf check for selinux support.

2007-09-12  Matthew Grooms <mgrooms@shrew.net>
	* src/racoon/cfparse.y
	src/racoon/cftoken.l
	src/racoon/handler.c
	src/racoon/isakmp_quick.c
	src/racoon/pfkey.c
	src/racoon/sainfo.c
	src/racoon/sainfo.h
	src/racoon/racoon.conf.5 : Implement clientaddr sainfo remote id option
	and cleanup sainfo syntax in the man page.

2007-09-05  Matthew Grooms <mgrooms@shrew.net>
	* src/racoon/sainfo.c: Sort sainfos on insert and improve matching logic.

2007-09-03  Matthew Grooms <mgrooms@shrew.net>
	* src/racoon/racoon.conf.5: Correct wins4 and nbns4 modecfg option syntax.
	* src/racoon/cftoken.l: Add nbns4 as an alias for wins4.

2007-08-07  Emmanuel Dreyfus  <manu@netbsd.org>
	* src/racoon/isakmp_xauth.c: Don't mix up RADIUS authentication and
	  authorization ports. Allow interoperability with freeradius

2007-07-18  Matthew Grooms  <mgrooms@shrew.net>
	* src/racoon/racoon.conf.5: various man page updates

2007-07-18  Yvan Vanhullebus  <vanhu@netasq.com>
	* configure.ac	
	src/libipsec/ipsec_dump_policy.c
	src/libipsec/ipsec_get_policylen.c
	src/libipsec/ipsec_strerror.c
	src/libipsec/key_debug.c
	src/libipsec/libpfkey.h
	src/libipsec/pfkey.c
	src/libipsec/pfkey_dump.c
	src/libipsec/policy_parse.y
	src/libipsec/policy_token.l
	src/libipsec/test-policy-priority.c
	src/racoon/admin.c
	src/racoon/backupsa.c
	src/racoon/cfparse.y
	src/racoon/cftoken.l
	src/racoon/ipsec_doi.c
	src/racoon/isakmp.c
	src/racoon/isakmp_inf.c
	src/racoon/isakmp_quick.c
	src/racoon/pfkey.c
	src/racoon/policy.c
	src/racoon/proposal.c
	src/racoon/remoteconf.c
	src/racoon/sainfo.c
	src/racoon/session.c
	src/racoon/sockmisc.c
	src/racoon/strnames.c
	src/setkey/parse.y
	src/setkey/setkey.c
	src/setkey/token.l:
	use a single PATH_IPSEC_H to fix some path_to_ipsec.h issues.

2007-07-16  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/proposal.c: indentation